<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/Margin"
    tools:context=".ActivityB">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvquiz1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvquiz1" />

            <RadioGroup
                android:id="@+id/radGroup1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radBtn1" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radBtn2" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radBtn3" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radBtn4" />
            </RadioGroup>

            <TextView
                android:id="@+id/tvquiz2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvquiz2" />

            <RadioGroup
                android:id="@+id/radGroup2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radBtn5" />

                <RadioButton
                    android:id="@+id/radioButton6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radBtn6" />

                <RadioButton
                    android:id="@+id/radioButton7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radBtn7" />

                <RadioButton
                    android:id="@+id/radioButton8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radBtn8" />

            </RadioGroup>

            <TextView
                android:id="@+id/tvquiz3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvquiz3" />

            <RadioGroup
                android:id="@+id/radGroup3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radioButton9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radBtn9" />

                <RadioButton
                    android:id="@+id/radioButton10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radBtn10" />

            </RadioGroup>

            <TextView
                android:id="@+id/tvquiz4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvquiz4" />

            <EditText
                android:id="@+id/edt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:id="@+id/tvquiz5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvquiz5" />

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkBox1" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkBox2" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkBox3" />

            <TextView
                android:id="@+id/tvquiz6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvquiz6" />

            <RadioGroup
                android:id="@+id/radGroup4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radioButton11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radBtn11" />

                <RadioButton
                    android:id="@+id/radioButton12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radBtn12" />

                <RadioButton
                    android:id="@+id/radioButton13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radBtn13" />

                <RadioButton
                    android:id="@+id/radioButton14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radBtn14" />

            </RadioGroup>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Submit" />

            <Button
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Back" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
